--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,3 @@
-* {
-    box-sizing: border-box
-}
-
-/* Slideshow container */
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides1 {
-    display: none;
-}
-
-.mySlides2 {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev {
-    cursor: pointer;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    justify-content: flex-end;
-    font-weight: bold;
-    font-size: 100px;
-    transition: 0.6s ease;
-    border-radius: 3px 3px 3px 3px;
-    user-select: none;
-    color: black;
-}
-
-.next {
-    cursor: pointer;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    justify-content: flex-start;
-    font-weight: bold;
-    font-size: 100px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    color: black;
-
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-    background-color: whitesmoke;
-    color: black;
-}
-
 /* Caption text */
 .text {
     color: black;
@@ -74,37 +9,6 @@
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-    background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
 
 .name-heading {
     font-family: 'Just Me Again Down Here';
@@ -164,6 +68,17 @@
     color: whitesmoke;
 }
 
+.img-container {
+    height: 100%;
+    max-width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-tile{
+    object-fit: cover;    
+}
+
 @media screen and (max-width: 500px) {
     .fun-font {
         font-size: 32px;
@@ -176,12 +91,3 @@
     }
 }
 
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-
-    to {
-        opacity: 1
-    }
-}
