--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@
     padding-left: 20px;
     padding-right: 20px;
     transition: background-color 0.6s ease;
-    transition: color 0.6s ease;
     cursor: pointer;
     margin: 0 10px;
+    border-radius: 5px;
 }
 
 .navbutton:hover {
