--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
 }
 
 .navbutton {
-    background-color: #bbb;
+    background-color: #ffb3ba;
     color: black;
     padding-left: 20px;
     padding-right: 20px;
