--- a/styles.css
+++ b/styles.css
@@ -138,3 +138,20 @@
         display:none;
     }
 }
+.main-container {
+    background-color: #f2f2f2; 
+    text-align: center; 
+    padding: 30px 30px 0px 30px; 
+}
+.body-style {
+    max-width: 75%;
+    margin: 0 auto;
+}
+@media screen and (max-width: 650px) {
+    .body-style {
+        max-width: 100%;
+    }
+    .main-container{
+        padding: 30px 5px 0px 5px;
+    }
+}
