--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
 .name-heading {
     font-family: 'Just Me Again Down Here';
     font-size: 128px;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
 }
 
 .fun-font {
@@ -172,17 +174,22 @@
 .main-container {
     background-color: #f2f2f2;
     text-align: center;
-    padding: 30px 30px 0px 30px;
+    padding: 30px 10px 10px 30px;
 }
 
 .body-style {
-    max-width: 85%;
+    max-width: 95%;
     margin: 0 auto;
 }
 
-@media screen and (max-width: 650px) {
+
+@media screen and (max-width: 700px) {
     .body-style {
         max-width: 100%;
+    }
+    .tile-columns{
+        flex-direction: column;
+        align-items: center;
     }
 
     .main-container {
